[gd_scene load_steps=3 format=2]

[ext_resource path="res://joypads.gd" type="Script" id=1]
[ext_resource path="res://joypad_diagram.tscn" type="PackedScene" id=2]

[node name="joypads" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -240.0
margin_right = 270.0
margin_bottom = 240.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoypadDiagram" parent="." instance=ExtResource( 2 )]
position = Vector2( 415, 180 )
scale = Vector2( 0.5, 0.5 )

[node name="DeviceInfo" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 30.0
rect_min_size = Vector2( 500, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeviceInfo"]
margin_right = 50.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Device"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoyNumber" type="SpinBox" parent="DeviceInfo"]
margin_left = 54.0
margin_right = 134.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
size_flags_vertical = 3
max_value = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="DeviceInfo"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 138.0
margin_right = 148.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 0 )

[node name="JoyName" type="Label" parent="DeviceInfo"]
margin_left = 152.0
margin_right = 540.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.229156, 1, 0.239205, 1 )
text = "Controller Name Here"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axes" type="VBoxContainer" parent="."]
margin_top = 50.0
margin_right = 255.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis0" type="HBoxContainer" parent="Axes"]
margin_right = 260.0
margin_bottom = 20.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis0"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis0"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis0/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis1" type="HBoxContainer" parent="Axes"]
margin_top = 24.0
margin_right = 260.0
margin_bottom = 44.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis1"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis1"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis1/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis2" type="HBoxContainer" parent="Axes"]
margin_top = 48.0
margin_right = 260.0
margin_bottom = 68.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis2"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 2"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis2"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis2/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis3" type="HBoxContainer" parent="Axes"]
margin_top = 72.0
margin_right = 260.0
margin_bottom = 92.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis3"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 3"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis3"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis3/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis4" type="HBoxContainer" parent="Axes"]
margin_top = 96.0
margin_right = 260.0
margin_bottom = 116.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis4"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 4"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis4"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis4/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis5" type="HBoxContainer" parent="Axes"]
margin_top = 120.0
margin_right = 260.0
margin_bottom = 140.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis5"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 5"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis5"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis5/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis6" type="HBoxContainer" parent="Axes"]
margin_top = 144.0
margin_right = 260.0
margin_bottom = 164.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis6"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 6"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis6"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis6/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis7" type="HBoxContainer" parent="Axes"]
margin_top = 168.0
margin_right = 260.0
margin_bottom = 188.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis7"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 7"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis7"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis7/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis8" type="HBoxContainer" parent="Axes"]
margin_top = 192.0
margin_right = 260.0
margin_bottom = 212.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis8"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 8"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis8"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis8/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis9" type="HBoxContainer" parent="Axes"]
margin_top = 216.0
margin_right = 260.0
margin_bottom = 236.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis9"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 9"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis9"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis9/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis10" type="HBoxContainer" parent="Axes"]
margin_top = 240.0
margin_right = 260.0
margin_bottom = 260.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Axes/Axis10"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "Axis 10"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis10"]
margin_left = 54.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Axes/Axis10/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons"]
margin_right = 54.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Buttons:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonGrid" type="GridContainer" parent="Buttons"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 0 )
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="Label" parent="Buttons/ButtonGrid"]
margin_right = 27.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 31.0
margin_right = 58.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 62.0
margin_right = 89.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 93.0
margin_right = 120.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 124.0
margin_right = 151.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 155.0
margin_right = 182.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 186.0
margin_right = 213.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "6"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 217.0
margin_right = 244.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "7"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Label" parent="Buttons/ButtonGrid"]
margin_top = 24.0
margin_right = 27.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "8"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 31.0
margin_top = 24.0
margin_right = 58.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 62.0
margin_top = 24.0
margin_right = 89.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="11" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 93.0
margin_top = 24.0
margin_right = 120.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "11"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="12" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 124.0
margin_top = 24.0
margin_right = 151.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "12"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="13" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 155.0
margin_top = 24.0
margin_right = 182.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "13"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="14" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 186.0
margin_top = 24.0
margin_right = 213.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "14"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="15" type="Label" parent="Buttons/ButtonGrid"]
margin_left = 217.0
margin_top = 24.0
margin_right = 244.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "15"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vibration" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -140.0
margin_right = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weak" type="HBoxContainer" parent="Vibration"]
margin_right = 260.0
margin_bottom = 24.0
rect_min_size = Vector2( 260, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Vibration/Weak"]
margin_right = 182.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Vibration Weak Motor:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="SpinBox" parent="Vibration/Weak"]
margin_left = 186.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strong" type="HBoxContainer" parent="Vibration"]
margin_top = 28.0
margin_right = 260.0
margin_bottom = 52.0
rect_min_size = Vector2( 260, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Vibration/Strong"]
margin_right = 182.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Vibration Strong Motor:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="SpinBox" parent="Vibration/Strong"]
margin_left = 186.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Duration" type="HBoxContainer" parent="Vibration"]
margin_top = 56.0
margin_right = 260.0
margin_bottom = 80.0
rect_min_size = Vector2( 260, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Vibration/Duration"]
margin_right = 182.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Vibration Duration:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="SpinBox" parent="Vibration/Duration"]
margin_left = 186.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_vertical = 3
max_value = 10.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Vibration"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 84.0
margin_right = 260.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 10 )

[node name="Buttons" type="HBoxContainer" parent="Vibration"]
margin_top = 98.0
margin_right = 260.0
margin_bottom = 128.0
rect_min_size = Vector2( 260, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Vibration/Buttons"]
margin_right = 116.0
margin_bottom = 30.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Start Vibration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Vibration/Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 120.0
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop" type="Button" parent="Vibration/Buttons"]
margin_left = 144.0
margin_right = 260.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Stop Vibration"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Vibration/Buttons/Start" to="." method="_on_start_vibration_pressed"]
[connection signal="pressed" from="Vibration/Buttons/Stop" to="." method="_on_stop_vibration_pressed"]
